# helix

./: .env.example  .gitignore  README.md  requirements.txt  setup.py
daemon/: CMakeLists.txt  README.md
daemon/config/: helixd.yaml.example
daemon/include/helixd/: common.h  config.h  logger.h
daemon/include/helixd/core/: daemon.h  service.h
daemon/include/helixd/ipc/: handlers.h  protocol.h  server.h
daemon/scripts/: build.sh  install.sh
daemon/src/: main.cpp
daemon/src/config/: config.cpp
daemon/src/core/: daemon.cpp
daemon/src/ipc/: handlers.cpp  protocol.cpp  server.cpp
daemon/src/utils/: logger.cpp
daemon/systemd/: helixd.service
daemon/tests/: CMakeLists.txt
daemon/tests/integration/: test_daemon.cpp  test_handlers.cpp  test_ipc_server.cpp
daemon/tests/unit/: test_common.cpp  test_config.cpp  test_logger.cpp  test_protocol.cpp  test_rate_limiter.cpp
helix/: __main__.py  api_key_detector.py  ask.py  branding.py  cli.py  completion.py  config_utils.py  configure.py  coordinator.py  daemon_client.py  dependency_resolver.py  env_loader.py  error_parser.py  first_run_wizard.py  hardware_context.py  hardware_detection.py  install_parallel.py  installation_history.py  llm_router.py  network_config.py  packages.py  semantic_cache.py  stack_manager.py  update_checker.py  updater.py  validators.py  version_manager.py
helix/llm/: interpreter.py
helix/sandbox/: __init__.py  command_validator.py  docker_sandbox.py
helix/utils/: db_pool.py
scripts/: setup_daemon.py  setup_ollama.py
